# Product-Intelligence

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  readme_main.md  requirements.txt
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_agent_decisions.py  0003_raw_operational_entities.py  004_retrieval_fts_indexes.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/agents/: analytics_agent.py  base.py  competitor_agent.py  customer_intelligence_agent.py  engineering_agent.py  executive_reporting_agent.py  planner_agent.py  prd_agent.py  product_strategy_agent.py  reconsider.py  sprint_plan_agent.py  tools.py  validator.py
backend/app/agents/evals/: __init__.py  eval_customer_intelligence.py  eval_prd.py  eval_product_strategy.py  judge.py  metrics.py  runner.py
backend/app/analytics/: duckdb_manager.py  kpi_engine.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  data_sources.py  insights.py  recommendations.py  reports.py  search.py  workspaces.py
backend/app/connectors/: base.py  competitor_scraper.py  csv_connector.py  github_connector.py  jira_connector.py  slack_connector.py
backend/app/core/: rbac.py  security.py
backend/app/embeddings/: embedding_service.py  reranker.py
backend/app/etl/: sync.py
backend/app/notifications/: __init__.py  email.py  slack.py
backend/app/observability/: __init__.py  llm_metrics.py
backend/app/schemas/: agent_decision.py  common.py  data_source.py  insight.py  recommendation.py  user.py  workspace.py
backend/app/services/: auth_service.py  data_source_service.py  insight_service.py  recommendation_service.py  workspace_service.py
backend/app/tasks/: analysis_tasks.py  celery_app.py  embedding_tasks.py  ingestion_tasks.py  reporting_tasks.py
backend/app/utils/: cache.py  logging.py
backend/data/: analytics.duckdb
backend/scripts/: eval_retrieval.py  eval_retrieval_fixtures.json
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  queryClient.ts  useCurrentWorkspaceId.ts  utils.test.ts  utils.ts
frontend/src/pages/: AgentActivityPage.tsx  CompetitorWatchPage.tsx  DashboardPage.tsx  EngineeringHealthPage.tsx  InsightsPage.tsx  LoginPage.tsx  PRDCenterPage.tsx  ReportsPage.tsx  RoadmapPage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
infrastructure/grafana/provisioning/dashboards/: dashboards.yml  productos-ai-overview.json
infrastructure/nginx/: nginx.conf
infrastructure/otel/: otel-collector.yml
infrastructure/prometheus/: alerts.yml  prometheus.yml
